--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "astro": "^4.15.6",
-    "typescript": "^5.6.2"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.0.0",
+    "astro": "^5.1.5",
+    "typescript": "^5.7.3"
   }
 }
